--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-langchain
-google-auth
-langchain_google_vertexai
-pandas
-google-cloud-firestore
+uvicorn==0.27.1
+fastapi==0.110.0
+langgraph==0.6.0
+langchain==0.0.27
+langchain-google-genai==2.1.12
+google-cloud-firestore==2.20.2
+google-api-python-client==2.122.0
+pydantic==2.9.2
+langchain-google-vertexai==3.2.2
+langchain-core==1.2.14
+pyarrow==22.0.0
+google-auth==2.32.0
+google-auth-oauthlib==1.2.0
+pytz==2024.2
+psutil==7.1.3
+pandas==2.2.2
+google-cloud-secret-manager==2.19.0
